fix copyright footer

--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                 <div class="footer-bottom">
                     <div class="container">
                         <p class="copyright body-medium">
-                            Copyright 2024 DamianDuy1302
+                            © 2024 DamianDuy21
                         </p>
                     </div>
                 </div>
