--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- primary tags -->
-    <title>DamianDuy1302</title>
+    <title>Real Estate Page</title>
     <meta name="title" title="DamianDuy1302">
     <meta name="description" title="Front-end Project">
 
